[metadata]
name = ssh_config_json
version = attr: ssh_config_json.__version__
description = Dump JSON for your ssh config include IdentityFiles and restore those.
long_description = file: README.rst, CHANGELOG.rst
url = https://github.com/tubone24/ssh_config_json
project-urls =
    Documentation = https://github.com/tubone24/ssh_config_json
    ProjectBlog = https://blog.tubone-project24.xyz
author = tubone24
author_email = tubo.yyyuuu@gmail.com
keywords = ssh-config, json, backup
license = MIT
license-file = LICENSE
platform = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Documentation :: Sphinx
    Topic :: System :: Archiving :: Backup
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
include_package_data = True
packages =
    ssh_config_json
setup_requires = setuptools
install_requires =
    paramiko==2.7.2
    docopt==0.6.2
tests_require =
    pytest==5.2.3
    pytest-cov==2.6.0
    pytest-pythonpath==0.7.3
    flake8==3.7.8
    pep8==1.7.1
    pyflakes==2.0.0
    pytest-flake8==1.0.2
    pytest-pep8==1.0.6
    coverage==4.5.4
    codecov==2.0.15
    black==19.10b0
python_requires = >= 3.6
test_suite = tests

[options.extras_require]
develop =
    black==19.10b0
    pytest==5.2.3
    pytest-cov==2.7.1
    pytest-pythonpath==0.7.3
    flake8==3.7.7
    pep8==1.7.1
    pyflakes==2.1.1
    pytest-flake8==1.0.4
    pytest-pep8==1.0.6
    coverage==4.5.4
    codecov==2.0.15
docs =
    Sphinx==2.2.0
    sphinx-rtd-theme==0.4.3

[bdist_wheel]
universal = true

[aliases]
test=pytest

[tool:pytest]
; If integration test, set option "--it"
addopts = -v -ra --pep8 --showlocals
log_cli = false
log_level = INFO
log_file_level = INFO
timeout = 5
python_paths = ./ssh_config_json
pep8ignore =
    E501
    W503
    tests/*.py ALL
    tests/it/*.py ALL

[flake8]
max-line-length = 120
doctests = True
exclude =
    .git
    .eggs
    __pycache__
    tests/*.py
    docs/
    build/
    dist/
    tests/it/*.py

[options.entry_points]
console_scripts =
    scj = ssh_config_json.main:main